; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_subr.c_vauth_node_owner.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_subr.c_vauth_node_owner.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnode_attr = type { i64 }

@va_uid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vnode_attr*, i32)* @vauth_node_owner to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vauth_node_owner(%struct.vnode_attr* %0, i32 %1) #0 {
  %3 = alloca %struct.vnode_attr*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.vnode_attr* %0, %struct.vnode_attr** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %6 = load %struct.vnode_attr*, %struct.vnode_attr** %3, align 8
  %7 = icmp ne %struct.vnode_attr* %6, null
  br i1 %7, label %8, label %22

8:                                                ; preds = %2
  %9 = load %struct.vnode_attr*, %struct.vnode_attr** %3, align 8
  %10 = load i32, i32* @va_uid, align 4
  %11 = call i64 @VATTR_IS_SUPPORTED(%struct.vnode_attr* %9, i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %22

13:                                               ; preds = %8
  %14 = load %struct.vnode_attr*, %struct.vnode_attr** %3, align 8
  %15 = getelementptr inbounds %struct.vnode_attr, %struct.vnode_attr* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i32, i32* %4, align 4
  %18 = call i64 @kauth_cred_getuid(i32 %17)
  %19 = icmp eq i64 %16, %18
  %20 = zext i1 %19 to i64
  %21 = select i1 %19, i32 1, i32 0
  store i32 %21, i32* %5, align 4
  br label %22

22:                                               ; preds = %13, %8, %2
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i64 @VATTR_IS_SUPPORTED(%struct.vnode_attr*, i32) #1

declare dso_local i64 @kauth_cred_getuid(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
